{
  "version": 4,
  "terraform_version": "1.5.1",
  "serial": 105,
  "lineage": "5a833bda-136e-6111-e8f1-64527cd4bce6",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "bastion-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-07-05T01:46:24.929-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/taibi-samira/global/firewalls/app-cluster-bastion-ssh",
            "log_config": [],
            "name": "app-cluster-bastion-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/taibi-samira/global/networks/kubernetes-cluster",
            "priority": 1000,
            "project": "taibi-samira",
            "self_link": "https://www.googleapis.com/compute/v1/projects/taibi-samira/global/firewalls/app-cluster-bastion-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "bastion"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.google_networks.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.google_networks",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": true,
            "id": "projects/taibi-samira/global/networks/kubernetes-cluster",
            "mtu": 0,
            "name": "kubernetes-cluster",
            "project": "taibi-samira",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/taibi-samira/global/networks/kubernetes-cluster"
          }
        }
      ]
    },
    {
      "module": "module.google_networks",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "0.0.0.0/0",
            "id": "projects/taibi-samira/global/routes/egress-internet",
            "name": "egress-internet",
            "network": "https://www.googleapis.com/compute/v1/projects/taibi-samira/global/networks/kubernetes-cluster",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/taibi-samira/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "taibi-samira",
            "self_link": "https://www.googleapis.com/compute/v1/projects/taibi-samira/global/routes/egress-internet",
            "tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.google_networks.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.google_networks",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-07-05T01:46:25.083-07:00",
            "id": "projects/taibi-samira/regions/europe-west1/routers/kubernetes-cluster-router",
            "name": "kubernetes-cluster-router",
            "network": "https://www.googleapis.com/compute/v1/projects/taibi-samira/global/networks/kubernetes-cluster",
            "project": "taibi-samira",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/taibi-samira/regions/europe-west1/routers/kubernetes-cluster-router"
          },
          "dependencies": [
            "module.google_networks.google_compute_network.vpc",
            "module.google_networks.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.google_networks",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "icmp_idle_timeout_sec": 30,
            "id": "taibi-samira/europe-west1/kubernetes-cluster-router/kubernetes-cluster--subnet-nat-router",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "min_ports_per_vm": 0,
            "name": "kubernetes-cluster--subnet-nat-router",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "taibi-samira",
            "region": "europe-west1",
            "router": "kubernetes-cluster-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/taibi-samira/regions/europe-west1/subnetworks/kubernetes-cluster--subnet",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.google_networks.google_compute_network.vpc",
            "module.google_networks.google_compute_router.router",
            "module.google_networks.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.google_networks",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-06-29T10:10:11.078-07:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/taibi-samira/regions/europe-west1/subnetworks/kubernetes-cluster--subnet",
            "ip_cidr_range": "10.10.0.0/16",
            "name": "kubernetes-cluster--subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/taibi-samira/global/networks/kubernetes-cluster",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "taibi-samira",
            "region": "europe-west1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.102.0.0/16",
                "range_name": "gke-app-cluster-services-15c17f0e"
              },
              {
                "ip_cidr_range": "10.101.0.0/16",
                "range_name": "gke-app-cluster-pods-15c17f0e"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/taibi-samira/regions/europe-west1/subnetworks/kubernetes-cluster--subnet"
          },
          "dependencies": [
            "module.google_networks.google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}